<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:isScrollContainer="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

        <TimePicker
            android:id="@+id/alarm_edit"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_centerVertical="true"
                android:text="@string/details_repeat_weekly"/>

            <com.tv.alarm.CustomToggle
                android:id="@+id/weeklyToggle"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <View
            android:background="#cfcfcf"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_centerVertical="true"
                android:text="@string/details_monday"/>

            <com.tv.alarm.CustomToggle
                android:id="@+id/mondayToggle"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <View
            android:background="#cfcfcf"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_centerVertical="true"
                android:text="@string/details_tuesday"/>

            <com.tv.alarm.CustomToggle
                android:id="@+id/tuesdayToggle"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:focusableInTouchMode="false"/>

        </RelativeLayout>

        <View
            android:background="#cfcfcf"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_centerVertical="true"
                android:text="@string/details_wednesday"/>

            <com.tv.alarm.CustomToggle
                android:id="@+id/wednesdayToggle"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <View
            android:background="#cfcfcf"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_centerVertical="true"
                android:text="@string/details_thursday"/>

            <com.tv.alarm.CustomToggle
                android:id="@+id/thursdayToggle"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <View
            android:background="#cfcfcf"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_centerVertical="true"
                android:text="@string/details_friday"/>

            <com.tv.alarm.CustomToggle
                android:id="@+id/fridayToggle"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <View
            android:background="#cfcfcf"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_centerVertical="true"
                android:text="@string/details_saturday"/>

            <com.tv.alarm.CustomToggle
                android:id="@+id/saturdayToggle"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <View
            android:id="@+id/divider2"
            android:background="#cfcfcf"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_centerVertical="true"
                android:text="@string/details_sunday"/>

            <com.tv.alarm.CustomToggle
                android:id="@+id/sundayToggle"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>